# frigate-timelapse-hls

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: release.yml
nginx/: nginx.conf
src/frigate_timelapse_hls/: __init__.py  cli.py  config.py  hls.py  ingest.py  models.py  pipeline.py  scanner.py  state.py  worker.py
web/: player.html
